chages in HEX code appearance

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 
     <div class="color-picker">
-        <p>Choose Color in Color Picker</p>
-        <label for="colorPicker">
+        <p>Choose Color</p>
+        <label class="pickerContainer" for="colorPicker">
             <input type="color" name="color" id="colorPicker" value="#1dbbce">
         </label>
     </div>
