changes in footer and favicon

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Color Picker using Js</title>
+    <!-- Add favicon link -->
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+    <!-- Optionally, add a shortcut icon for older browsers -->
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
     <div class="container">
         <h1>A simple color picker - HTML / CSS / JavaScript</h1>
         <h2>It can be used with browsers that support 
@@ -22,6 +27,10 @@
             <input type="color" name="color" id="colorPicker" value="#1dbbce">
         </label>
     </div>
+
+    <footer class="footer">
+        <h1>crafted with ❤️ by <a href="https://github.com/anuragbehura" target="_blank">Anurag Behura</a></h1>
+    </footer>
 
 </body>
 <script src="./assets/js/main.js"></script>
